--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "dnozaki",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mongodb": "^5.6.0",
